# climasense-

./: .gitignore  CLAUDE.md  ClimaSense vs Gemma 3n Winners — Competitive Gap Analysis & Upgraded Strategy.md  HANDOFF.md  README.md  TODO.md  pyproject.toml
config/: tools_schema.json
data/demo_crops/: manifest.json
docs/: architecture.md  architecture.tex  competitive_landscape.md  differentiation_analysis.md  extension_officer_outreach.md  farmer_needs_research.md  research.md  vs_farmer_chat.md  writeup.md
docs/demo_assets/: satellite_moment_script.md
notebooks/: climasense_demo.ipynb  colab_demo.ipynb  kernel-metadata.json
scripts/: agent_e2e_test.py  airplane_mode_test.py  benchmark_lora_v2.py  curate_demo_images.py  dynamic_integration_test.py  eval_swahili_only.py  finetune_vision.py  multilingual_demo.py  patch_kaggle_fixes.py  render_architecture.py  rescore_eval.py  run_eval.py  update_notebook.py
src/climasense/: __init__.py  agent.py  personas.py
src/climasense/cache/: __init__.py  cached_tool.py  store.py
src/climasense/edge/: __init__.py  deploy.py
src/climasense/eval/: __init__.py  benchmark.py
src/climasense/multimodal/: __init__.py  audio.py  tts.py  vision.py
src/climasense/tools/: __init__.py  advisory.py  crop_disease.py  market.py  postharvest.py  satellite.py  soil.py  weather.py
