[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climasense"
version = "0.1.0"
description = "ClimaSense: Agentic Climate Risk Intelligence for Smallholder Farmers — Gemma 4 Good Hackathon"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=5.5.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "gtts>=2.3.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=0.30.0",
]

[project.optional-dependencies]
# vllm is only used on the local vLLM host, never on Kaggle. Keeping it in the
# base deps made pip's resolver time out (ResolutionTooDeep) on Kaggle because
# vllm's transitive pins conflict with Kaggle's pre-installed torch/cuda build.
serve = ["vllm>=0.7.0"]
# Geospatial stack for the Sentinel-2 NDVI tool. Optional so Kaggle users can
# run the notebook without pulling the full GDAL/rasterio chain.
satellite = [
    "pystac-client>=0.8.0",
    "planetary-computer>=1.0.0",
    "rioxarray>=0.15.0",
    "rasterio>=1.3.0",
    "matplotlib>=3.7.0",
]
dev = ["pytest", "ruff", "ipykernel", "jupyter"]
kaggle = ["kaggle-benchmarks"]

[tool.setuptools.packages.find]
where = ["src"]
